ci: fix push filter ignoring tags

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches-ignore:
       - 'automated/**'
+    tags:
+      - '**'
   pull_request: {}
   schedule:
     - cron: '0 0 * * *'
