--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -42,17 +42,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - name: Install dependencies
         run: |
           ./script/install-dependencies.sh
           python -m pip install -r docs-requirements.txt
       - name: mypy
-        run: >
-          python -m mypy
-          --no-incremental
-          src/streamlink/
-          src/streamlink_cli/
-          tests/
-          docs/
-          setup.py
+        run: |
+          python -m mypy --no-incremental
