--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,3 +55,10 @@ show_error_codes = true
 show_error_context = true
 show_column_numbers = true
 warn_no_return = false
+files = [
+  "src/streamlink/",
+  "src/streamlink_cli/",
+  "tests/",
+  "docs/",
+  "setup.py",
+]
