plugin.api.websocket: use certifi's cacert.pem
- Add `certifi` as a direct dependency (already defined by `requests`)
  and don't set a version range
- Set the `ca_certs` SSL option in `WebsocketClient` which defaults to
  the CA certs file bundled by `certifi`, similar to HTTPS requests
  made by `requests`

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ package_dir =
   =src
 packages = find:
 install_requires =
+  certifi
   importlib-metadata ; python_version<"3.8"
   isodate
   lxml >=4.6.4,<5.0
