chore: ignore coverage in TYPE_CHECKING blocks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ exclude_lines = [
   "def __repr__",
   "raise NotImplementedError",
   "if __name__ == \"__main__\":",
+  "if (?:typing\\.)?TYPE_CHECKING:",
 ]
 
 
