ci: revert deploy-pypi changes
Partially reverts de5bda806d28d7c41879049237391c3dd68f01e4

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,6 +147,6 @@ jobs:
         run: ./script/github-release.py "${STREAMLINK_DIST_DIR}"/*.tar.gz{,.asc}
       - name: PyPI release
         env:
-          TWINE_USERNAME: "__token__"
-          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+          PYPI_USER: streamlink
+          PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: ./script/deploy-pypi.sh
