--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -50,3 +50,4 @@ jobs:
       - name: mypy
         run: |
           python -m mypy --no-incremental
+          python -m mypy --no-incremental docs
