build: include py.typed in package_data

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,10 @@ install_requires =
 [options.packages.find]
 where = src
 
+[options.package_data]
+streamlink =
+    py.typed
+
 [flake8]
 ignore =
   # W503 - line break before binary operator
