tests: ignore setuptools 67.3.0 DeprecationWarning
Ignore new `pkg_resources.declare_namespace` DeprecationWarning
which was added in the setuptools 67.3.0 release.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ build-file = "streamlink/_version.py"
 [tool.pytest.ini_options]
 filterwarnings = [
   "always",
+  "ignore:.*pkg_resources\\.declare_namespace.*:DeprecationWarning",
 ]
 
 
