--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ extend-ignore = [
   "A003",  # builtin-attribute-shadowing
   "C408",  # unnecessary-collection-call
   "ISC003",  # explicit-string-concatenation
+  "PLW2901",  # redefined-loop-name
 ]
 extend-exclude = [
   "docs/conf.py",
