--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,6 +113,7 @@ extend-exclude = [
 "src/streamlink/__init__.py" = ["I"]
 "src/streamlink/_version.py" = ["I"]
 "src/streamlink/plugin/api/useragents.py" = ["E501"]
+"src/streamlink_cli/main.py" = ["PLW0603"]
 
 [tool.ruff.isort]
 known-first-party = ["streamlink", "streamlink_cli"]
