--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ install_requires =
   pycryptodome >=3.4.3,<4
   PySocks !=1.5.7,>=1.5.6
   requests >=2.26.0,<3.0
+  trio >=0.22.0,<1
   urllib3 >=1.26.0,<3
   websocket-client >=1.2.1,<2.0
 
