build: override setuptools build backend
- Add custom build backend which overrides certain hooks
- Include custom build backend in sdists via `MANIFEST.in`
- Remove `build>=1.0.0` workaround from `build-and-sign.sh`
- Add build backend tests, update order of tests and coverage config

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -32,6 +32,7 @@ coverage:
       streamlink:
         threshold: 1
         paths:
+          - "build_backend/"
           - "src/streamlink/"
           - "!src/streamlink/plugins/"
       streamlink_cli:
