--- a/pyproject.toml
+++ b/pyproject.toml
@@ -212,7 +212,9 @@ extend-ignore = [
   "C408",  # unnecessary-collection-call
   "ISC003",  # explicit-string-concatenation
   "PLC1901",  # compare-to-empty-string
+  "PLC2801",  # unnecessary-dunder-call
   "PLW2901",  # redefined-loop-name
+  "RUF021",  # parenthesize-chained-operators
 ]
 extend-exclude = [
   "docs/conf.py",
