--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,6 +68,34 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
+  test_build:
+    name: Test build
+    if: github.event_name != 'push'
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 300
+      - name: Fetch tags
+        run: git fetch --depth=300 origin +refs/tags/*:refs/tags/*
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+      - name: Install Python dependencies
+        run: >
+          python -m pip install -U
+          -r dev-requirements.txt
+          build wheel
+      - name: Build sdist and wheels
+        run: ./script/build-and-sign.sh
+      - name: Plugins JSON
+        run: |
+          set -x
+          unzip -p ./dist/streamlink-*-any.whl 'streamlink-*.dist-info/RECORD' | grep 'streamlink/plugins/_plugins.json'
+          unzip -p ./dist/streamlink-*-any.whl 'streamlink/plugins/_plugins.json' | jq -e 'keys > 0'
+          unzip -p ./dist/streamlink-*-any.whl 'streamlink/plugins/_plugins.json' | jq
+
   documentation:
     name: Test docs
     if: github.event_name != 'push'
